--- a/src/build-src/templates/about.ejs
+++ b/src/build-src/templates/about.ejs
@@ -44,34 +44,37 @@
 
     </div>
 
-    <!-- the projects section  -->
-    <div class="project-sec">
-        <b class="project-sec-heading">
-            <!-- <span class="mdi mdi-pin"></span> -->
-            <span class="mdi mdi-chevron-double-right"></span>
-            <span>some "good looking" projects</span> 
-        </b>
-        <div class="project-cards">
-            <%- projectCards %>
-                <!-- project cards comes here  -->
-        </div>
+    <div class="profile-about about-me bordered-about">
+        <!-- a short description -->
+        <p>Hi,
+        <br>I&#39;m Agraj, a random lad from <a href="https://en.wikipedia.org/wiki/Kerala">Kerala</a>, often found online as <em>bRuttaZz</em>. I was a hard core science enthusiast from my primary school, a physics enthusiast to be specific. I&#39;m the kind of person who gets easily amazed by some simple, cool natural phenomena. </p>
+        <p>It was back then, when I was doing some simulation for my physics mini project on <a href="https://en.wikipedia.org/wiki/Percolation_theory">Percolation Theory</a>, that I was drawn into the realm of computer science and programming in general.  Since then, I have been building some cool stuff to fulfill my temporary personal needs (at that time, also to impress my ex-girlfriend).</p>
+        <p>As a netizen once famously said &quot;<em>If you got a creative itch, Programming can scratch that itch!</em>&quot;.</p>
+        <p>I found programming as a good way to satisfy my instant-gratification-monkey (I mean my brain)! As of now, I still remain a programmer. Like any other passionate developer out there, I also love FOSS/FLOSS and am highly motivated by its philosophies. Thanks to GNU and Linux.</p>
+        <details>
+            <summary><b>More about me..</b></summary>
+
+            <ul>
+            <li>I use GNU/Linux as my daily driver</li>
+            <li>I prefer GNOME over KDE ( solely personal :)</li>
+            <li>I am a fan of federated systems like, <a href="https://en.wikipedia.org/wiki/ActivityPub">activityPub</a>, email, <a href="https://matrix.org/">matrix</a>, etc.</li>
+            <li>I consider politics to be of great value and something that should be constantly discussed by all of us.</li>
+            <li>I found myself more aligned with Left wing political ideologies.</li>
+            <li>I strongly believe FOSS plays a much more significant role than it&#39;s praised for.</li>
+            <li>I love music and sounds in general, and secretly try to learn guitar, violin, or at least a harmonica whenever I&#39;m free and motivated (which is a rare scenario).</li>
+            <li>As a remaining of my old Physics degree, I possess <a href="https://en.wikipedia.org/wiki/David_J._Griffiths">David Griffith&#39;s</a>, <a href="https://www.cambridge.org/highereducation/books/introduction-to-quantum-mechanics/990799CA07A83FC5312402AF6860311E#overview">Introduction to Quantum Mechanics</a>, and tries to complete reading it whenever I&#39;m free and motivated (again, a rare scenario).</li>
+            <li>In my sleep, I dream about becoming a kernel developer.</li>
+            <li>I love writing scripts.</li>
+            <li>I don&#39;t like God(s) but Humans. Among them, like Girls slightly more, especially those ones who talk about politics.</li>
+            </ul>
+            <p>( a lot of &#39;I&#39;s there )</p>
+            <p>Let me stop here, this&#39;s way more than my Google-Portfolio.</p>
+    
+        </details>            
     </div>
 
-    <!-- the blogs section  -->
-    <div class="project-sec">
-        <b class="project-sec-heading">
-            <!-- <span class="mdi mdi-pin"></span> -->
-            <span class="mdi mdi-chevron-double-down"></span>
-            <span> some "decent" blogs </span>
-        </b>
-        <div class="blog-cards">
-            <%- blogCards %>
-                <!-- blog cards comes here  -->
-        </div>
-    </div>
-    
     <center>
-        <a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">-</a>
+        <a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue; display: none;">-</a>
     </center>
 
 
