job title update! Now I'm at knowbe4 😎

--- a/src/build-src/templates/about.ejs
+++ b/src/build-src/templates/about.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs', {
     name: "about",
     title: "Agraj P Das (bRuttaZz)",
-    description: "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!", 
+    description: "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!",
     ldJson: `{
         "@context": "https://schema.org",
         "@id": "https://brutt.site",
@@ -50,7 +50,7 @@
         <br>I&#39;m Agraj, a random lad from <a href="https://en.wikipedia.org/wiki/Kerala">Kerala</a>, often found online as <em>bRuttaZz</em>. I was a hard core science enthusiast from my primary school, a physics enthusiast to be specific. I&#39;m the kind of person who gets easily amazed by some simple, cool natural phenomena. </p>
         <p>It was back then, when I was doing some simulation for my physics mini project on <a href="https://en.wikipedia.org/wiki/Percolation_theory">Percolation Theory</a>, that I was drawn into the realm of computer science and programming in general.  Since then, I have been building some cool stuff to fulfill my temporary personal needs (at that time, also to impress my ex-girlfriend).</p>
         <p>As a netizen once famously said &quot;<em>If you got a creative itch, Programming can scratch that itch!</em>&quot;.</p>
-        <p>I found programming as a good way to satisfy my instant-gratification-monkey (I mean my brain)! As of now, I still remain a programmer. Like any other passionate developer out there, I also love FOSS/FLOSS and am highly motivated by its philosophies. Thanks to GNU and Linux.</p>
+        <p>I found programming as a good way to satisfy my instant-gratification-monkey (I mean my brain)! Like any other passionate developer out there, I also love FOSS/FLOSS and am highly motivated by its philosophies. Thanks to GNU and Linux.</p>
         <details>
             <summary><b>More about me..</b></summary>
 
@@ -69,8 +69,8 @@
             </ul>
             <p>( a lot of &#39;I&#39;s there )</p>
             <p>Let me stop here, this&#39;s way more than my Google-Portfolio.</p>
-    
-        </details>            
+
+        </details>
     </div>
 
     <center>
