just some random updates

--- a/src/build-src/templates/partials/project-card.ejs
+++ b/src/build-src/templates/partials/project-card.ejs
@@ -4,7 +4,9 @@
             <a href="<%= projectUrl %>">
                 <img width="100px" src="<%= imageSrc %>">
             </a>
-            <br><b><%= projectName %></b>
+            <div class="project-img-sec">
+            <b><%= projectName %></b>
+            </div>
         </center>
     </div>
     <div class="vertical-align-center">
