--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,18 @@
 @font-face {
-    font-family: 'RedHatMono';
+    font-family: "RedHatMono";
     font-weight: 200;
     src: url(./fonts/red_hat_mono/mono/RedHatMono-Medium.woff2) format(woff2);
 }
 
 @font-face {
     /* font-family: 'Roboto', sans-serif; */
-    font-family: 'RedHatMonoRegular';
+    font-family: "RedHatMonoRegular";
     font-weight: 200;
     src: url(./fonts/red_hat_mono/mono/RedHatMono-Regular.woff2) format(woff2);
 }
 
-
 body {
-    font-family: 'RedHatMono', monospace;
+    font-family: "RedHatMono", monospace;
 }
 
 :root {
@@ -220,7 +219,6 @@ a {
     text-align: left;
 }
 
-
 .project-only-sec .project-card {
     margin-bottom: 18px;
     margin-right: 0;
@@ -243,7 +241,7 @@ a {
     padding: 10px;
     margin-top: 10px;
     margin-right: 10px;
-    font-family: 'RedHatMonoRegular' monospace;
+    font-family: "RedHatMonoRegular" monospace;
     font-size: smaller;
 }
 
@@ -300,7 +298,7 @@ a {
     padding-bottom: 10px;
     padding-top: 19px;
     margin-top: 10px;
-    font-family: 'RedHatMonoRegular' monospace;
+    font-family: "RedHatMonoRegular" monospace;
     font-size: smaller;
 }
 
@@ -310,7 +308,7 @@ a {
 }
 
 .blog-card .title {
-    font-size: 1.0rem;
+    font-size: 1rem;
     color: var(--profile-cover-text-color);
 }
 
@@ -429,8 +427,12 @@ a {
     color: var(--profile-cover-secondary-text-color);
 }
 
+.project-img-sec {
+    width: 130px;
+}
+
 .blog-content {
-    font-family: 'RedHatMono', monospace;
+    font-family: "RedHatMono", monospace;
     font-size: medium;
     color: var(--blog-content-text);
 }
