--- a/src/build-src/templates/about.ejs
+++ b/src/build-src/templates/about.ejs
@@ -11,14 +11,13 @@
         "description": "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!",
         "logo": "https://brutt.site/assets/images/avatar.jpg",
         "sameAs": [
-            "https://twitter.com/bruttazz_",
             "https://github.com/bruttazz",
             "https://instagram.com/bruttazz",
             "https://fosstodon.org/@bRUttaZz"
         ]
     }`,
     keywords: "agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site, aboutme, about, self, info, person",
-    shareImage: "https://brutt.site/assets/images/avatar.jpg",
+    shareImage: "https://brutt.site/assets/images/avatar.jpg"
     }); %>
 
     <!-- about tab  -->
