--- a/src/build-src/templates/blogs.ejs
+++ b/src/build-src/templates/blogs.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs', {
     name: "blogs",
     title: "Blogs | bRuttaZz",
-    description: "Blogs of bRuttaZz (Agraj P Das) | List of some of my blog posts..", 
+    description: "Blogs of bRuttaZz (Agraj P Das) | List of some of my blog posts..",
     ldJson: `{
         "@context": "https://schema.org",
         "@id": "https://brutt.site",
@@ -9,10 +9,10 @@
         "name": "Blogs | bRuttaZz",
         "url": "https://brutt.site/blogs",
         "description": "Blogs of bRuttaZz (Agraj P Das)! List of some of my blog posts..",
-        "logo": "https://brutt.site/assets/images/avatar.jpg",
+        "logo": "https://brutt.site/assets/images/avatar.jpg"
     }`,
     keywords: "blogs, allblogs, writings, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site",
-    shareImage: "https://brutt.site/assets/images/avatar.jpg",
+    shareImage: "https://brutt.site/assets/images/avatar.jpg"
     }); %>
 
     <!-- blogs tab  -->
