now there a new blog

--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -30,7 +30,7 @@
     <meta property="og:url" content="https://brutt.site">
     <meta property="og:site_name" content="<%= title %>">
     <meta property="og:image" content="<%= shareImage %>">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="<%= shareImage %>">
     <meta name="twitter:title" content="<%= title %>">
     <meta name="twitter:description" content="<%= description %>">
     <meta name="twitter:site" content="@bRuttaZz">
