it's almost ready

--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="description" content="<%= description %>">
     <meta name="keywords" content="<%= keywords %>">
@@ -18,7 +18,7 @@
         <%- ldJson %>
     </script>
 
-    <link rel="stylesheet" href="<%= baseUrl %>./assets/style.css">
+    <link rel="stylesheet" href="<%= baseUrl %>./assets/style.css?tag=<%= Math.random() %>">
     <!-- <link rel="shortcut icon" href="<%= baseUrl %>./assets/images/avatar.jpg" type="image/x-icon"> -->
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
         crossorigin="anonymous">
