--- a/templates/partials/project-card.ejs
+++ b/templates/partials/project-card.ejs
@@ -2,9 +2,9 @@
     <div class="vertical-align-center">
         <center>
             <a href="<%= projectUrl %>">
-                <img width="100px" src="<%= imageSrc %>">
+                <img class="project-img-width" src="<%= imageSrc %>">
             </a>
-            <div class="project-img-sec">
+            <div class="project-img-sec project-img-sec-width">
             <b><%= projectName %></b>
             </div>
         </center>
