--- a/assets/style.css
+++ b/assets/style.css
@@ -229,7 +229,7 @@ a {
 .project-cards {
     overflow-x: scroll;
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     text-align: left;
 }
 
