--- a/templates/partials/project-card.ejs
+++ b/templates/partials/project-card.ejs
@@ -1,5 +1,5 @@
 <div class="project-card">
-    <div class="vertical-align-center">
+    <div class="vertical-align-center project-card-img-container">
         <center>
             <a href="<%= projectUrl %>">
                 <img class="project-img-width" src="<%= imageSrc %>">
@@ -9,7 +9,7 @@
             </div>
         </center>
     </div>
-    <div class="vertical-align-center">
+    <div class="vertical-align-center project-card-txt-container">
         <p class="shortInfo"><%= shortInfo %></p>
         <p>
             <a href="<%= source %>">
