--- a/templates/about.ejs
+++ b/templates/about.ejs
@@ -23,7 +23,7 @@
     <!-- about tab  -->
 
     <h1>Agraj P Das</h1>
-    <p class="short-catch">This site is intentionally being simple..</p>
+    <small><p class="short-catch">This site is intentionally being simple..</p></small>
     <div class="container">
 
         <div class="profile-img">
