--- a/templates/blogs.ejs
+++ b/templates/blogs.ejs
@@ -16,7 +16,7 @@
     }); %>
 
     <!-- blogs tab  -->
-    <h4 class="ps-1 blogs-heading">Some of my "fair enough" writings..</h4>
+    <small class="ps-1 blogs-heading"><b>Some of my "fair enough" writings..</b></small>
     <div class="blogs-only-sec">
         <%- blogs %>
     </div>
