--- a/templates/blogs.ejs
+++ b/templates/blogs.ejs
@@ -16,7 +16,7 @@
     }); %>
 
     <!-- blogs tab  -->
-    <small class="ps-1 blogs-heading"><b>Some of my "fair enough" writings..</b></small>
+    <small class="ps-1 blogs-heading"><b>Human biases are weird; even my dyslexic mind has a thirst for storytelling..</b></small>
     <div class="blogs-only-sec">
         <%- blogs %>
     </div>
