--- a/templates/projects.ejs
+++ b/templates/projects.ejs
@@ -16,7 +16,7 @@
 %>
 
     <!-- projects tab  -->
-    <small class="ps-1 blogs-heading"><b>Some of my "fair enough" projects..</b></small>
+    <small class="ps-1 blogs-heading"><b>At times, I do some useless projects..</b></small>
     <div class="project-only-sec">
         <%- projects %>
     </div>
