--- a/templates/blogs.ejs
+++ b/templates/blogs.ejs
@@ -4,12 +4,20 @@
     description: "Blogs of bRuttaZz (Agraj P Das) | List of some of my blog posts..",
     ldJson: `{
         "@context": "https://schema.org",
-        "@id": "https://brutt.site",
+        "@id": "https://brutt.site/blogs",
         "@type": "WebPage",
         "name": "Blogs | bRuttaZz",
         "url": "https://brutt.site/blogs",
         "description": "Blogs of bRuttaZz (Agraj P Das)! List of some of my blog posts..",
-        "logo": "https://brutt.site/assets/images/avatar.jpg"
+        "primaryImageOfPage": {
+            "@type": "ImageObject",
+            "url": "https://brutt.site/assets/images/avatar.jpg"
+        },
+        "author": {
+            "@type": "Person",
+            "name": "Agraj P Das",
+            "url": "https://brutt.site"
+        }
     }`,
     keywords: "blogs, allblogs, writings, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site",
     shareImage: "https://brutt.site/assets/images/avatar.jpg"
