--- a/templates/projects.ejs
+++ b/templates/projects.ejs
@@ -4,12 +4,21 @@
     description: "Projects of bRuttaZz (Agraj P Das) | List of some of my 'just for fun' projects.." ,
     ldJson: `{
         "@context" : "https://schema.org" ,
-        "@id" : "https://brutt.site" ,
+        "@id" : "https://brutt.site/projects" ,
         "@type" : "WebPage" ,
         "name": "Projects | bRuttaZz" ,
         "url" : "https://brutt.site/projects" ,
-        "description": "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." ,
-        "logo": "https://brutt.site/assets/images/avatar.jpg" }`,
+        "description": "Projects of bRuttaZz (Agraj P Das)! A list of some of my 'just for fun' projects." ,
+        "primaryImageOfPage": {
+            "@type": "ImageObject",
+            "url": "https://brutt.site/assets/images/avatar.jpg"
+        },
+        "author": {
+            "@type": "Person",
+            "name": "Agraj P Das",
+            "url": "https://brutt.site"
+        }
+    }`,
     keywords: "projects, allprojects, works, docs, agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site",
     shareImage: "https://brutt.site/assets/images/avatar.jpg"
 });
