--- a/templates/about.ejs
+++ b/templates/about.ejs
@@ -8,13 +8,21 @@
         "@type": "WebPage",
         "name": "Agraj P Das (bRuttaZz)",
         "url": "https://brutt.site",
-        "description": "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!",
-        "logo": "https://brutt.site/assets/images/avatar.jpg",
+        "description": "Agraj P Das (@bRUttaZz)! A software enthusiast. My little space in the internet!",
+        "primaryImageOfPage": {
+            "@type": "ImageObject",
+            "url": "https://brutt.site/assets/images/avatar.jpg"
+        },
         "sameAs": [
             "https://github.com/bruttazz",
             "https://instagram.com/bruttazz",
             "https://fosstodon.org/@bRUttaZz"
-        ]
+        ],
+        "author": {
+            "@type": "Person",
+            "name": "Agraj P Das",
+            "url": "https://brutt.site"
+        }
     }`,
     keywords: "agraj, agrajpdas, bruttazz, brutt, bruttsite, brutt.site, aboutme, about, self, info, person",
     shareImage: "https://brutt.site/assets/images/avatar.jpg"
