--- a/templates/blog.ejs
+++ b/templates/blog.ejs
@@ -35,6 +35,10 @@
         </div>
         <br>
         <%- content %>
+
+        <div class="bottom-clause">
+            Got any objections to my points? love to hear them. Feel free to drop me a mail or ping me on TG / Matrix.
+        </div>
     </div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
     <style>
@@ -43,5 +47,6 @@
             color: var(--hlgs-text);
         }
     </style>
+
 
 <%- include('partials/footer'); %>
