Nothing just some beautifyings

--- a/templates/blog.ejs
+++ b/templates/blog.ejs
@@ -3,6 +3,7 @@
     name: "blog",
     title: title,
     description: description,
+    url: `https://brutt.site${url}`,
     ldJson: `{
         "@context": "https://schema.org",
         "@id": "https://brutt.site${url}",
