--- a/templates/blogs.ejs
+++ b/templates/blogs.ejs
@@ -2,6 +2,7 @@
     name: "blogs",
     title: "Blogs | bRuttaZz",
     description: "Blogs of bRuttaZz (Agraj P Das) | List of some of my blog posts..",
+    url: "https://brutt.site/blogs",
     ldJson: `{
         "@context": "https://schema.org",
         "@id": "https://brutt.site/blogs",
