--- a/templates/partials/header.ejs
+++ b/templates/partials/header.ejs
@@ -25,11 +25,13 @@
     <script src="<%= baseUrl %>./assets/js/index.js" type="module"></script>
     <meta property="og:locale" content="en_GB">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="<%= title %>">
-    <meta property="og:description" content="<%= description %>">
-    <meta property="og:url" content="https://brutt.site">
+    <meta property="og:url" content="<%= url %>">
     <meta property="og:site_name" content="<%= title %>">
+    <meta property="og:title" content="<%= title %>">
     <meta property="og:image" content="<%= shareImage %>">
+    <meta property="og:description" content="<%= description %>">
+
+    <meta name="author" content="bRuttaZz">
     <meta name="twitter:card" content="<%= shareImage %>">
     <meta name="twitter:title" content="<%= title %>">
     <meta name="twitter:description" content="<%= description %>">
