--- a/templates/projects.ejs
+++ b/templates/projects.ejs
@@ -2,6 +2,7 @@
     name: "projects" ,
     title: "Projects | bRuttaZz" ,
     description: "Projects of bRuttaZz (Agraj P Das) | List of some of my 'just for fun' projects.." ,
+    url: "https://brutt.site/projects",
     ldJson: `{
         "@context" : "https://schema.org" ,
         "@id" : "https://brutt.site/projects" ,
