--- a/templates/about.ejs
+++ b/templates/about.ejs
@@ -2,6 +2,7 @@
     name: "about",
     title: "Agraj P Das (bRuttaZz)",
     description: "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!",
+    url: "https://brutt.site",
     ldJson: `{
         "@context": "https://schema.org",
         "@id": "https://brutt.site",
