--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: "FiraCode";
     font-size: 1rem;
@@ -9,7 +8,9 @@ html {
     scroll-behavior: smooth;
 }
 
-div, img, a {
+div,
+img,
+a {
     -webkit-tap-highlight-color: transparent;
 }
 
@@ -225,7 +226,6 @@ a {
     text-align: left;
 }
 
-
 .project-only-sec .project-card {
     margin-bottom: 18px;
     margin-right: 0;
@@ -396,7 +396,6 @@ a {
 .project-img-sec-width {
     width: 100px;
 }
-
 
 /* .switch-box {
     background-color: var(--profile-co-about-bg);
