--- a/new_builder/assets/css/style.css
+++ b/new_builder/assets/css/style.css
@@ -208,8 +208,8 @@ hr {
 }
 
 .item-card .item-img img {
-    width: 100px;
-    aspect-ratio: 1;
+    width: 90px;
+    /*aspect-ratio: 1;*/
 }
 
 .item-card .item-title {
