--- a/new_builder/templates/base/main.html
+++ b/new_builder/templates/base/main.html
@@ -66,7 +66,10 @@
     <footer>
         <center>
             {% block footer_block %}{% endblock %}
-            <div><span class="mdi mdi-copyleft"></span> 2025 Agraj P Das</div>
+            <div>
+                <span class="mdi mdi-copyleft"></span> {{ build_year }} Agraj P
+                Das
+            </div>
             <div>
                 Note: This site was developed and works best in the
                 <a href="https://www.firefox.com" class="footer-a"
