--- a/new_builder/templates/base/main.html
+++ b/new_builder/templates/base/main.html
@@ -8,6 +8,7 @@
             rel="stylesheet"
             crossorigin="anonymous"
         />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <link href="{{ asset_dir }}/css/color.css" rel="stylesheet" />
         <link
             href="{{ asset_dir }}/css/color-dark.css"
@@ -38,12 +39,12 @@
                         >about</a
                     >
                     <a
-                        href="/projects.html"
+                        href="/projects"
                         class="nav-link {% block nav_projects_class %}{% endblock %}"
                         >projects</a
                     >
                     <a
-                        href="/blogs.html"
+                        href="/blogs"
                         class="nav-link {% block nav_blogs_class %}{% endblock %}"
                         >blogs</a
                     >
