--- a/new_builder/templates/about.html
+++ b/new_builder/templates/about.html
@@ -1,6 +1,5 @@
 <!-- prettier-ignore -->
-{% extends "base/main.html" %}
-{% block title %}bRuttaZz{% endblock %}
+{% extends "base.html" %}
 {% block nav_about_class %} selected {% endblock %}
 {% block content_block %}
 
@@ -148,4 +147,11 @@
     </a>
 </p>
 
+<!--for mostodon verification-->
+<a
+    rel="me"
+    href="https://fosstodon.org/@bRuttaZz"
+    style="color: blue; display: none"
+    >-</a
+>
 {% endblock %}
