--- a/new_builder/templates/blogs.html
+++ b/new_builder/templates/blogs.html
@@ -1,6 +1,5 @@
 <!-- prettier-ignore -->
-{% extends "base/main.html" %}
-{% block title %}Blogs | bRuttaZz{% endblock %}
+{% extends "base.html" %}
 {% block nav_blogs_class %} selected {% endblock %}
 {% block content_block %}
 
