--- a/new_builder/templates/projects.html
+++ b/new_builder/templates/projects.html
@@ -1,6 +1,5 @@
 <!-- prettier-ignore -->
-{% extends "base/main.html" %}
-{% block title %}Projects | bRuttaZz{% endblock %}
+{% extends "base.html" %}
 {% block nav_projects_class %} selected {% endblock %}
 {% block content_block %}
 
