some new eye care adjustments you knoww..

--- a/assets/css/color-dark.css
+++ b/assets/css/color-dark.css
@@ -2,7 +2,7 @@
 :root {
     --text-color: #909497;
     --text-color-bold: #e0e0e0;
-    --text-color-blog: #909497;
+    --text-color-blog: #9b9b97;
     --text-color-footer: #6a6f71;
     --highlight-color: #3fafda;
     --highlight-color-text: #262626;
