--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -2,7 +2,7 @@
 :root {
     --text-color: #7d7d7d;
     --text-color-bold: #515151;
-    --text-color-blog: #7d7d7d;
+    --text-color-blog: #515151;
     --text-color-footer: #909497;
     --highlight-color: #96e2ff;
     --highlight-color-text: #575757;
