--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,11 @@
                 {% block content_block %}{% endblock %}
             </div>
         </div>
+        <style>
+            .text-container h1 {
+                line-height: 2.2rem;
+            }
+        </style>
     </body>
     <footer>
         <center>
