update on some small things

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
                 media="(prefers-color-scheme: dark)"
             />
         </noscript>
-        <script src="{{ asset_dir }}/scripts/scripts.js" anonymoue></script>
+        <script src="{{ asset_dir }}/scripts/scripts.js" anonymous></script>
         <title>{{ title }}</title>
         {% include "partials/seo-headers.html" %}
     </head>
