--- a/templates/about.html
+++ b/templates/about.html
@@ -130,6 +130,9 @@
     <a href="{{ aboutConf.contacts.email }}">
         <span class="mdi mdi-at"></span>
     </a>
+    <a href="{{ aboutConf.contacts.xmpp }}">
+        <span class="mdi mdi-xmpp"></span>
+    </a>
     <a href="{{ aboutConf.contacts.matrix }}">
         <span class="mdi mdi-matrix"></span>
     </a>
