--- a/templates/blog.html
+++ b/templates/blog.html
@@ -38,7 +38,8 @@
 {% block footer_block %}
 <div class="bottom-clause">
     Got any objections to my points? love to hear them. Feel free to drop me an
-    <a href="{{ contacts.email }}" class="footer-a">email</a> or ping me on
-    <a href="{{ contacts.matrix }}" class="footer-a">Matrix</a>.
+    <a href="{{ contacts.email }}" class="footer-a">email</a> or ping me via
+    <a href="{{ contacts.matrix }}" class="footer-a">Matrix</a> or
+    <a href="{{ contacts.xmpp }}" class="footer-a">XMPP</a>.
 </div>
 {% endblock %}
