--- a/templates/about.html
+++ b/templates/about.html
@@ -5,9 +5,11 @@
 
 <img class="profile-img" src="{{ asset_dir }}/imgs/me-pixelated.jpg" />
 
-<p class="greeting">Hi, I'm Agraj P Das.</p>
+<p class="greeting">
+    Hi, I'm Agraj P Das. <span class="ipa">/ʌˈgɹæˌdʒˈ/</span>
+</p>
 <p class="tagline">
-    I build software stuff!
+    <b>I build software stuff!</b>
     <br />
     <b>PGP keys</b>:
     <a
