--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,12 @@ img {
 
 .header-side-btn {
     width: 50px;
+    font-size: larger;
+}
+
+.header-side-btn a {
+    text-decoration: none;
+    color: unset;
 }
 
 .header-btn {
