--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,7 @@
 <!-- prettier-ignore -->
 {% extends "base.html" %}
 {% block nav_about_class %} selected {% endblock %}
+{% block dashboard_btn_class_block %}{% endblock %}
 {% block content_block %}
 
 <img class="profile-img" src="{{ asset_dir }}/imgs/me-pixelated.jpg" />
